almost done with socket layer

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-[ ] CONNECTIONS ARE EQUIPARABLE
-[ ] API WORKS WITH BACKEND
+[X] CONNECTIONS ARE EQUIPARABLE
+[X] MAILBOX SYSTEM WORKS
+[ ] API WORKS :
+  -CAN WRITE TO CONN
+  -CAN READ FROM CONN
 [ ] WS SERVER WORKS WITH CLIENT
 [ ] CLIENT CAN NOW SEND NOTIFICATIONS ASYNCRONOUSLY DUE TO MAILBOX SYSTEM, IMPLEMENT IT THERE
