--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 [X] CONNECTIONS ARE EQUIPARABLE
 [X] MAILBOX SYSTEM WORKS
-[ ] API WORKS :
+[X] API WORKS :
   -CAN WRITE TO CONN
   -CAN READ FROM CONN
+[ ] FIX COMMAND FORMATTING ON MAIN BACKEND SERVER BETTER DO IT ON WINDOWS
 [ ] WS SERVER WORKS WITH CLIENT
-[ ] CLIENT CAN NOW SEND NOTIFICATIONS ASYNCRONOUSLY DUE TO MAILBOX SYSTEM, IMPLEMENT IT THERE
