--- a/TODO
+++ b/TODO
@@ -3,5 +3,6 @@
 [X] API WORKS :
   -CAN WRITE TO CONN
   -CAN READ FROM CONN
-[ ] FIX COMMAND FORMATTING ON MAIN BACKEND SERVER BETTER DO IT ON WINDOWS
-[ ] WS SERVER WORKS WITH CLIENT
+[X] FIX COMMAND FORMATTING ON MAIN BACKEND SERVER BETTER DO IT ON WINDOWS
+[X] WS SERVER WORKS WITH CLIENT
+[ ] DEFINE A WAY TO HANDLE CHAOTIC CONNECTIONS TO SAME ID, IT CAN HAPPEN AND IT WILL 
