--- a/TODO
+++ b/TODO
@@ -6,3 +6,4 @@
 [X] FIX COMMAND FORMATTING ON MAIN BACKEND SERVER BETTER DO IT ON WINDOWS
 [X] WS SERVER WORKS WITH CLIENT
 [ ] DEFINE A WAY TO HANDLE CHAOTIC CONNECTIONS TO SAME ID, IT CAN HAPPEN AND IT WILL 
+[ ] DEFMETHOD ON NIL OBJECT?
